# vanil_web

./: .env.example  .env.test  .gitignore  Dockerfile  PROJECT_UML_SPEC.md  README.md  docker-compose.yml  prometheus.yml  promtail-config.yml  pyproject.toml  pytest.ini
.github/workflows/: pylint.yml
admin_vanil_test/: manage.py
admin_vanil_test/admin_vanil_test/: asgi.py  settings.py  urls.py  wsgi.py
admin_vanil_test/core/: admin.py  models.py  redis_client.py
app/: constants.py  db.py  http_codes.py  logging.py  main.py  metrics.py  redis.py  views.py  worker.py
app/infrastructure/: uow.py
app/middleware/: cashier_session.py
app/routes/: __init__.py  admin_routes.py  crud_routes.py  deps.py  extra_routes.py  session_utils.py
app/services/: admin_service.py  auth_service.py  cart_service.py  index_service.py  order_service.py  public_service.py
app/settings/: config.py
app/static/: style.css
app/templates/: admin_instr.html  admin_items.html  admin_orders.html  admin_orders_archive.html  admin_orders_live.html  index.html  instr.html  links_page.html  orders.html  orders_archive.html  orders_future.html
app/tests/: conftest.py  test_admin_permissions.py  test_async_probe.py  test_auth.py  test_cart.py  (+1 more)
bot/: config.py  handlers.py  main.py  web_app.py
db/: database.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
migrations/: 0000001_init_database.down.sql  0000001_init_database.up.sql  0000002_active_flag_items.sql  0000002_add_items_pos.down.sql  0000002_add_items_pos.sql  0000003_order_for_date.sql  0000003_order_type.down.sql  0000003_order_type.sql  0000004_categories.sql  0000004_shops_groups.sql  0000005_categories_items.sql  0000005_shops_android_id.sql  0000006_comment_orders_items.sql  0000006_comments_orders.sql  0000006_order_flags.sql  0000006_orders_items_comment.sql  0000007_add_items_pos.down.sql  0000007_add_items_pos.up.sql  0000007_indexes.sql  0000008_order_shipment.sql
nginx/: nginx.conf
(+27 files in other folders)
